--- a/style.css
+++ b/style.css
@@ -1,37 +1,74 @@
 .ghost{
 
+  position:absolute;
+  animation-iteration-count:infinite;
+  animation-name:roam-the-earth;
+  animation-direction:normal;
+  animation-duration:10s;
+  animation-timing-function:ease;
+  opacity:0;
+  transition:opacity 0.2s;
+  background-image:url(ghost.png);
+
 }
+
+
 .ghost div{
 
-}
-.ghost:hover div{
+  position:relative;
+  animation-name:hover;
+  width:220px;
+  height:220px;
+  animation-duration:0.5s;
+  animation-iteration-count:infinite;
+  animation-timing-function:linear;
+  animation-direction:alternate;
+
 
 }
+
+.ghost:hover {
+    opacity:1;
+}
+
 @keyframes hover{
   from{
-
+    bottom:0px;
+    transform:rotate(-5deg);
   }
-  to{
 
+  to{
+    bottom:30px;
+    transform:rotate(5deg);
   }
 }
+
 @keyframes roam-the-earth{
   0%{
-
+    bottom:100%;
+    left:-220px;
   }
   20%{
-
+    bottom:0px;
+    left:0px;
+    transform:rotate(0deg);
   }
   40%{
-
+    bottom:90%;
+    left:90%;
+    transform:rotate(360deg);
   }
   60%{
-
+    bottom:50%;
+    left:0px;
+    transform:rotate(0deg);
   }
   80%{
-
+    bottom:50%;
+    left:0px;
   }
   100%{
-
+    bottom:-220px;
+    left:100%;
   }
 }
